Guardo en GitHub

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -1,10 +1,22 @@
-.contenedor h2{
-    color:white;
-}
-
 .contenedor{
     width: 200px;
     background-color: aqua;
 
+    p{
+        color: brown;
+        &:nth-of-type(2){
+            color: black;
+        }
+    }
+
+    h2{
+        color: darkred;
+    }
+
+    &:hover p{
+        color: chartreuse;
+    }
+
 }
+
 
