--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 .card {
@@ -18,4 +19,229 @@
 }
 .card:hover p {
   color: chartreuse;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0%;
+}
+.nav ul, .nav li {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  list-style-type: none;
+}
+.nav ul a, .nav li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  padding: 10px 20px;
+}
+.nav ul a:hover, .nav li a:hover {
+  font-weight: bold;
+  transition: 0.5ms;
+  text-decoration: underline;
+}
+
+.fa-bars {
+  color: black;
+  font-size: 24px;
+  padding: 15px;
+  visibility: hidden;
+}
+
+@media (max-width: 600px) {
+  nav ul {
+    position: fixed;
+    top: 0;
+    left: -350px;
+    flex-direction: column;
+    justify-content: start;
+    width: 250px;
+    height: 100vh;
+    transition: 0.5s;
+    z-index: 100;
+  }
+  .card {
+    position: relative;
+  }
+  .display {
+    width: auto;
+  }
+  header {
+    width: auto;
+  }
+  .fa-bars {
+    visibility: visible;
+  }
+}
+.fa-bars:hover + ul {
+  left: 0;
+}
+
+nav ul:hover {
+  left: 0;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item1 img {
+  width: 100px;
+}
+
+.item1 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.item2 img {
+  width: 100px;
+}
+
+.item2 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.btn {
+  margin: 20px;
+  background-color: rgb(84, 209, 0);
+}
+
+.item3 img {
+  width: 100px;
+}
+
+.item3 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.item4 img {
+  width: 100px;
+}
+
+.item4 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.item5 img {
+  width: 100px;
+}
+
+.item5 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.item6 img {
+  width: 100px;
+}
+
+.item6 img:hover {
+  width: 100px;
+  transform: rotateX(360deg);
+  transition: 2s;
+}
+
+.item1 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item2 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item3 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item4 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item5 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item6 p, .item1 h3 {
+  padding: 10px;
+}
+
+.item1 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  transition: 3s;
+  margin: 50px;
+}
+
+.item2 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  margin: 50px;
+}
+
+.item3 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  margin: 50px;
+}
+
+.item4 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  margin: 50px;
+}
+
+.item5 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  margin: 50px;
+}
+
+.item6 {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid;
+  margin: 50px;
+}
+
+.ofertas h1 {
+  animation-duration: 2s;
+  animation-name: aparecer;
+  animation-iteration-count: infinite;
+}
+
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.btn {
+  margin: 20px;
+  background-color: rgb(84, 209, 0);
+}
+
+body {
+  background-color: greenyellow;
 }
