--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -2,10 +2,10 @@
 @import "fonts";
 @import "card";
 @import "nav";
-@import"mobile";
+@import"media";
 @import "items";
 @import "oferta";
 @import"btn";
 @import"body";
-
+@import"tabla";
 
