--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .card {
   width: 200px;
   background-color: rgb(0, 0, 0);
+  margin: 20px;
 }
 .card p {
   color: brown;
 }
 .card p:nth-of-type(2) {
-  color: black;
+  color: rgb(8, 68, 138);
 }
 .card h2 {
   color: darkred;
@@ -21,70 +23,143 @@
   color: chartreuse;
 }
 
-.nav {
+/*
+@media(max-width:600px){
+    nav ul{
+        position: fixed;
+        top: 0;
+        left: -350px;
+        flex-direction: column;
+        justify-content: start;
+        width: 250px;
+        height: 100vh;
+        transition:0.5s;
+        z-index: 100;
+
+    }
+    .card{
+        position: relative;
+    }
+
+    .display{
+        width: auto;
+    }
+
+    header{
+        width: 100vw;
+    }
+
+
+
+    .fa-bars{
+        visibility: visible;
+    }
+
+}
+
+.fa-bars:hover + ul{
+    left: 0;
+}
+
+nav ul:hover{
+    left: 0;
+}*/
+.navbar_links, .navbar_menu, .navbar_logo {
+  display: flex;
+  align-items: center;
+}
+
+.navbar {
+  background: yellowgreen;
+  height: 80px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  top: 0%;
+  padding: 0.5rem calc((100vw - 1200px) / 2);
+  z-index: 10;
+  position: relative;
 }
-.nav ul, .nav li {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
-  align-items: center;
-  list-style-type: none;
-}
-.nav ul a, .nav li a {
-  color: rgb(0, 0, 0);
+.navbar_logo {
+  color: red;
+  cursor: pointer;
   text-decoration: none;
-  padding: 10px 20px;
+  font-size: 2rem;
+  margin-left: 24px;
 }
-.nav ul a:hover, .nav li a:hover {
-  font-weight: bold;
-  transition: 0.5ms;
-  text-decoration: underline;
+.navbar_bars {
+  opacity: 0;
+}
+@media screen and (max-width: 768px) {
+  .navbar_bars {
+    color: black;
+    opacity: 1;
+    position: absolute;
+    top: 22px;
+    right: 20px;
+    font-size: 2rem;
+  }
+}
+.navbar_menu {
+  list-style: none;
+  text-align: center;
+  margin-right: 24px;
+}
+@media screen and (max-width: 768px) {
+  .navbar_menu {
+    display: none;
+  }
+}
+.navbar_links {
+  color: red;
+  justify-content: center;
+  text-decoration: none;
+  padding: 0 1rem;
+}
+.navbar_links:hover {
+  color: rgb(62, 248, 208);
+  transition: all 0.3s ease;
 }
 
-.fa-bars {
-  color: black;
-  font-size: 24px;
-  padding: 15px;
-  visibility: hidden;
+/*
+@media(max-width:600px){
+    nav ul{
+        position: fixed;
+        top: 0;
+        left: -350px;
+        flex-direction: column;
+        justify-content: start;
+        width: 250px;
+        height: 100vh;
+        transition:0.5s;
+        z-index: 100;
+
+    }
+    .card{
+        position: relative;
+    }
+
+    .display{
+        width: auto;
+    }
+
+    header{
+        width: 100vw;
+    }
+
+
+
+    .fa-bars{
+        visibility: visible;
+    }
+
 }
 
-@media (max-width: 600px) {
-  nav ul {
-    position: fixed;
-    top: 0;
-    left: -350px;
-    flex-direction: column;
-    justify-content: start;
-    width: 250px;
-    height: 100vh;
-    transition: 0.5s;
-    z-index: 100;
-  }
-  .card {
-    position: relative;
-  }
-  .display {
-    width: auto;
-  }
-  header {
-    width: auto;
-  }
-  .fa-bars {
-    visibility: visible;
-  }
-}
-.fa-bars:hover + ul {
-  left: 0;
+.fa-bars:hover + ul{
+    left: 0;
 }
 
-nav ul:hover {
-  left: 0;
-}
-
+nav ul:hover{
+    left: 0;
+}*/
 .items {
   display: flex;
   flex-direction: column;
@@ -244,4 +319,15 @@ nav ul:hover {
 
 body {
   background-color: greenyellow;
+}
+
+table {
+  border: solid 1px;
+  border-collapse: collapse;
+  margin: 30px;
+  width: 100px;
+}
+table th, table td {
+  border: solid 1px;
+  padding: 5px;
 }
