--- a/assets/src/scss/_card.scss
+++ b/assets/src/scss/_card.scss
@@ -1,13 +1,16 @@
 .card{
     width: 200px;
     background-color: rgb(0, 0, 0);
+    margin: 20px;
 
     p{
         color: brown;
         &:nth-of-type(2){
-            color: black;
+            color: rgb(8, 68, 138);
         }
     }
+
+
 
     h2{
         color: darkred;
