--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,7 +318,7 @@ nav ul:hover{
 }
 
 body {
-  background-color: greenyellow;
+  background-color: rgb(137, 207, 240);
 }
 
 table {
@@ -330,4 +330,110 @@ table {
 table th, table td {
   border: solid 1px;
   padding: 5px;
+}
+
+.text_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  margin: 0 auto;
+  height: 90vh;
+  z-index: 1;
+  width: 100%;
+  max-width: 1200px;
+  padding-right: 24px;
+  padding-left: 24px;
+}
+@media screen and (max-width: 768px) {
+  .text_container {
+    grid-template-columns: 1fr;
+    height: 100%;
+  }
+}
+.text_container-left {
+  width: 100%;
+  line-height: 1.2;
+}
+@media screen and (max-width: 768px) {
+  .text_container-left {
+    padding: 5rem 0;
+  }
+}
+@media screen and (max-width: 280px) {
+  .text_container-left {
+    line-height: 1.5;
+  }
+}
+.text_container-left h1 {
+  font-size: 4rem;
+  color: red;
+}
+@media screen and (max-width: 280px) {
+  .text_container-left h1 {
+    font-size: 1.5rem;
+  }
+}
+.text_container-left h2 {
+  font-size: 4rem;
+  color: red;
+}
+@media screen and (max-width: 280px) {
+  .text_container-left h2 {
+    font-size: 2rem;
+  }
+}
+.text_container-left p {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: 1rem;
+  color: red;
+}
+@media screen and (max-width: 280px) {
+  .text_container-left p {
+    font-size: 2rem;
+  }
+}
+.text_container-left p a {
+  text-decoration: none;
+  color: red;
+}
+.text_container-btn {
+  font-size: 1rem;
+  background-color: rgb(118, 39, 221);
+  padding: 14px 32px;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s;
+  outline: none;
+}
+.text_container-btn a {
+  position: relative;
+  z-index: 2;
+  color: white;
+  text-decoration: none;
+}
+.text_container-btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: black;
+  transition: all 0.3s;
+  border-radius: 4px;
+}
+.text_container-btn:hover:after {
+  width: 100%;
+}
+.text_container-right {
+  text-align: center;
+}
+.text_container-img {
+  height: 100%;
 }
