--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,8 @@ table {
   border: solid 1px;
   border-collapse: collapse;
   margin: 30px;
-  width: 100px;
+  width: 1px;
+  padding: 10px;
 }
 table th, table td {
   border: solid 1px;
