--- a/assets/src/scss/_tabla.scss
+++ b/assets/src/scss/_tabla.scss
@@ -2,7 +2,8 @@ table{
     border: solid 1px;
     border-collapse: collapse;
     margin: 30px;
-    width: 100px;
+    width: 1px;
+    padding: 10px;
     th,td{
         border: solid 1px;
         padding: 5px;
