--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -9,6 +9,11 @@
 @import"body";
 @import"tabla";
 @import"texto";
+@import"footer";
+@import"formulario";
+@import"info";
+@import"permiso";
+
 
 
 
