--- a/assets/src/scss/_card.scss
+++ b/assets/src/scss/_card.scss
@@ -1,23 +1,30 @@
 .card{
     width: 200px;
-    background-color: rgb(0, 0, 0);
     margin: 20px;
+    background-color: rgb(93, 193, 185);
+    border: none;
 
     p{
-        color: brown;
+        color: black;
         &:nth-of-type(2){
-            color: rgb(8, 68, 138);
+            color: black;
         }
     }
 
 
 
     h2{
-        color: darkred;
+        color: black;
     }
 
-    &:hover p{
-        color: chartreuse;
+    &:hover{
+
+        p{
+            color: chartreuse;
+        }
+        h2{
+            color: rgb(209, 36, 36);
+        }
     }
 
 }
