--- a/assets/src/scss/_tabla.scss
+++ b/assets/src/scss/_tabla.scss
@@ -1,9 +1,9 @@
-table{
+#tabla{
     border: solid 1px;
     border-collapse: collapse;
     margin: 30px;
-    width: 1px;
     padding: 10px;
+    width: 500px;
     th,td{
         border: solid 1px;
         padding: 5px;
