--- a/assets/src/scss/_texto.scss
+++ b/assets/src/scss/_texto.scss
@@ -88,7 +88,7 @@
             left: 0;
             width: 0;
             height: 100%;
-            background-color: black;
+            background-color: rgb(21, 255, 0);
             transition: all 0.3s;
             border-radius: 4px;
         }
