--- a/assets/src/scss/_nav.scss
+++ b/assets/src/scss/_nav.scss
@@ -7,13 +7,19 @@
 
 
 .navbar{
-    background: yellowgreen;
+    background: rgb(33, 0, 79);
     height: 80px;
     display: flex;
     justify-content: space-between;
     padding:0.5rem calc((100vw - 1200px) /2);
     z-index: 10;
     position: relative;
+
+    @include tablet{
+        .navbar{
+            max-width: max-content;        
+        }
+    }
 
     &_logo{
         color: red;
