--- a/assets/src/scss/_media.scss
+++ b/assets/src/scss/_media.scss
@@ -2,56 +2,11 @@
     @media screen and (max-width: 768px) {
         @content;
     }
-}
+};
 
 
 @mixin mobile {
     @media screen and (max-width: 280px) {
         @content;
     }
-}
-
-
-
-/*
-@media(max-width:600px){
-    nav ul{
-        position: fixed;
-        top: 0;
-        left: -350px;
-        flex-direction: column;
-        justify-content: start;
-        width: 250px;
-        height: 100vh;
-        transition:0.5s;
-        z-index: 100;
-
-    }
-    .card{
-        position: relative;
-    }
-    
-    .display{
-        width: auto;
-    }
-
-    header{
-        width: 100vw;
-    }
-
-
-
-    .fa-bars{
-        visibility: visible;
-    }
-
-}
-
-.fa-bars:hover + ul{
-    left: 0;
-}
-
-nav ul:hover{
-    left: 0;
-}*/
-
+};
